# canopen-message-interpreter

./: .gitignore  README.md  pyproject.toml
canopen_msg_interpreter/: cantraces.py  interpret.py
samples/: analyze.bat  ixxat1.trc  ixxat1.trc.csv  pcan1.csv  pcan1.trc  pcan1.trc.csv  pcan2.csv  pcan2.trc  pcan2.trc.csv  pcan3.trc
sources/: analyze.py
sources/modules/: canobjects.py  cantraces.py
